--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
+  <link rel="stylesheet" href="CSS/styles.css">
 </head>
+
 <body>
     <header>
       <h1>What are your ideas?</h1>
@@ -22,11 +23,13 @@
       </section>
     </main>
 
-    <ul id='finalResult'></ul>
+    <ul id='resulty'></ul>
 
     <script src="js/app.js"></script>
   </body>
   <footer>
-      
+      <p>
+        C 2005
+      </p>
   </footer>
 </html>
