--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <ul id='resulty'></ul>
   </main>
 
+  <div>
+    <canvas id="myChart" width="200" height="200"></canvas>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 
   <script src="js/app.js"></script>
 </body>
