--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </div>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 
-  <script src="js/app.js"></script>
+  <script src="JS/app.js"></script>
 </body>
 <footer>
   <p>
